MP rest client review comments implemented
Signed-off-by: David Kral <david.k.kral@oracle.com>